--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,5 +28,5 @@
   "editor.formatOnPaste": true,
   "editor.formatOnType": true,
   "editor.formatOnSave": true,
-  "editor.fontFamily": "Consolas, 'Courier New'"
+  "editor.fontFamily": "'Consolas', 'Courier New'"
 }
