--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,7 @@
     "jest": true
   },
   "rules": {
-    "react/react-in-jsx-scope": 0,
+    "react/react-in-jsx-scope": "off",
     "react-hooks/rules-of-hooks": "error",
     "no-console": 0,
     "react/state-in-constructor": 0,
@@ -34,5 +34,6 @@
       }
     ]
   },
+
   "plugins": ["prettier", "react", "react-hooks"]
 }
