--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,8 @@
     "jest": true
   },
   "rules": {
+    "class-methods-use-this":0,
+    "lass-methods-use-this":0,
     "react/react-in-jsx-scope": "off",
     "react-hooks/rules-of-hooks": "error",
     "no-console": 0,
